<resources>
    <string name="app_name">The Movie DB New</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_login">Login</string>
    <string name="et_email">Email</string>
    <string name="et_password">password</string>
    <string name="tv_signup">Sign Up</string>
    <string name="tv_logo">Logo</string>
    <string name="register_failed">Register Failed</string>
    <string name="register_success">Register Success</string>
    <string name="email_registered">Email Already Registered</string>
    <string name="email_pass_wrong">Email and Password Wrong</string>
    <string name="tv_welcome">Welcome:</string>
    <string name="tv_discovery">Discovery</string>
    <string name="tv_tittle">Tittle</string>
    <string name="tv_genres">Genres</string>
    <string name="tv_release_date">Release Date:</string>
    <string name="tv_status">Status:</string>
    <string name="tv_taglines">Taglines:</string>
    <string name="tv_desc">Description</string>
    <string name="loading">Loading Movies...</string>
    <string name="loaded">Movies Detail Loaded</string>
    <string name="error">Error</string>
    <string name="rating">Rating</string>
    <string name="overview">overview</string>
    <string name="your_favorite">Your Favorite</string>
    <string name="tv_name">Name</string>
    <string name="tv_password">Password</string>
    <string name="tv_update">Update</string>
    <string name="tv_gallery">gallery</string>
    <string name="tv_camera">camera</string>
    <string name="tv_edit_profile">Edit Profile</string>
    <string name="tv_logout">Logout</string>
    <string name="login_debug">Login Versi Debug</string>
    <string name="login_demo">Login Demo</string>
    <string name="login_pro">Login Pro</string>
</resources>