<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"

        android:background="@color/tmdb_blue"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/welcome"
                android:textColor="#ffff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="20sp"
                android:text="@string/tv_welcome"
                />
            <ImageButton
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/iv_profile"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="end"
                android:layout_margin="10dp"
                android:gravity="center"
                android:src="@drawable/ic_profile"
                android:background="@drawable/transparent"
                android:contentDescription="@string/tv_logo" />
            <ImageButton
                app:layout_constraintEnd_toStartOf="@id/iv_profile"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/iv_favorite"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="end"
                android:layout_margin="10dp"
                android:gravity="center"
                android:src="@drawable/ic_favorite"
                android:background="@drawable/transparent"
                android:contentDescription="@string/tv_logo" />
            <ImageButton
                app:layout_constraintEnd_toStartOf="@id/iv_favorite"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/iv_exit"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="end"
                android:layout_margin="10dp"
                android:gravity="center"
                android:src="@drawable/ic_exit"
                android:background="@drawable/transparent"
                android:contentDescription="@string/tv_logo" />


        </androidx.constraintlayout.widget.ConstraintLayout>
        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_users"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:paddingTop="20dp"
                android:padding="10dp"
                android:textColor="@color/white"
                android:text="@string/tv_discovery"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_conversion_absoluteHeight="32dp"
                tools:layout_conversion_absoluteWidth="379dp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="16dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_content">

            </androidx.recyclerview.widget.RecyclerView>

        </LinearLayout>

    </LinearLayout>